# rotting

crux-ports/: REPO  configure
crux-ports/augeas/: .footprint
crux-ports/camlp4/: .footprint  Pkgfile
crux-ports/dosfstools-git/: .footprint  Pkgfile
crux-ports/f2fs-tools/: .footprint  Pkgfile
crux-ports/fskit/: .footprint  Pkgfile
crux-ports/gconf/: .footprint  Pkgfile
crux-ports/i3/: Pkgfile
crux-ports/i3lock/: .footprint  Pkgfile
crux-ports/i3status/: Pkgfile
crux-ports/kakoune/: .footprint  Pkgfile
crux-ports/libcacard/: .footprint  Pkgfile
crux-ports/libinput/: .footprint  Pkgfile
crux-ports/libmtp/: .footprint  Pkgfile
fractals-rs/: Cargo.toml
incipient/incipient-server/webserver/: .env  Cargo.toml
incipient/incipient-server/webserver/src/: main.rs  model.rs
lxc-rs/: Cargo.toml
maze-backup/: Makefile  app.c  app.h  generator.c  grid.c  grid.h  includes.h  main.c  test  wayland.c  wayland.h
maze-rs/: Cargo.toml
neural-net/: CMakeLists.txt
neural-net-matrix/: CMakeLists.txt  bézier_génération_bdd.py  bézier_image.py
neural-net-matrix/src/: main.c
neural-net/data/: brain-copie.txt  parties_gagnantes_rond_1.txt
neural-net/src/: brain.c  brain.h  common.c  common.h  data.c  data.h  layer.c  layer.h  main.c  morpion.c  morpion.h  neuron.c  neuron.h
scripts/: cryptoclose  cryptoopen  net.br0  net.ipv6
song-parser-rs/: Cargo.toml
t411/: build.sh  main.c  token.c  token.h  torrent.c  torrent.h
tipe/: abstract.txt  add.py  convert.py  liste_fichiers  plot.py  ville_rond.py
y2038/: main.c  run.sh  test.c
(+101 files in other folders)
